# Assignments

./: README.md
assignment-five/: package-lock.json  package.json  readme.md
assignment-five/src/: index.ts
assignment-five/src/__test__/: index.spec.ts
assignment-four/: readme.md
assignment-four/QuestionOne/: taskOne.ts
assignment-four/QuestionThree/: package.json  readme.md  taskThree.ts  test.ts
assignment-four/QuestionTwo/: taskTwo.ts
assignment-one/: readme.md
assignment-one/QuestionOne/elm-implementation/: index.html
assignment-one/QuestionOne/elm-implementation/src/: Main.elm
assignment-one/QuestionOne/typescript-implementation/: taskOne.js  taskOne.ts
assignment-one/QuestionThree/: taskThree.js  taskThree.ts
assignment-one/QuestionTwo/: taskTwo.ts
assignment-six/: README.md
assignment-six/rust-web-client/: Cargo.toml  index.html
assignment-six/rust-web-client/src/: main.rs
assignment-six/rust-web-server/: Cargo.toml
assignment-six/rust-web-server/src/: main.rs
assignment-three/: readme.md
assignment-three/QuestionOne/: taskOne.js  taskOne.ts
assignment-three/QuestionTwo/: taskTwo  taskTwo.rs
assignment-two/: README.md
assignment-two/QuestionOne/: taskOne.js  taskOne.ts
assignment-two/QuestionThree/: PartOne.tsx  partTwo.ts  tsconfig.json
assignment-two/QuestionTwo/: package-lock.json  package.json
assignment-two/QuestionTwo/src/: App.tsx
assignment-two/QuestionTwo/src/QuestionTwo/: TaskTwo.tsx
presentation-lakin-course/: package.json  quokka.ts
(+1 files in other folders)
