[package]
name = "rust-web-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
wasm-bindgen = "0.2.67"
serde = "1"
serde_derive = "1"
anyhow = "1"
yew-router = "0.15.0"
rocket = "0.4.10"
getrandom = { version = "0.2", features = ["js"] }