[package]
name = "rust-web-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
raster = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = "0.1.44"

[dependencies.rocket_contrib]
default-features = false
features = ["json"]
